--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main>
@@ -13,7 +13,7 @@
     <div class="subtitulo">
 
       <div class="days">
-        <p class="text" id="days">0</p>
+        <p  id="days" class="text">0</p>
         <span>Dias</span>
       </div>
 
@@ -38,4 +38,5 @@
   </div>
   </main>
 </body>
+<script src="./app.js"></script>
 </html>
