--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
   <main>
   <div class="container">
+    <div class="side-1">
+    <img src="./images/images/top-image.svg" alt="top-image">
     <div class="titulo">READY TO LAUNCH IN...</div>
     <div class="subtitulo">
-
       <div class="days">
         <p  id="days" class="text">0</p>
         <span>Dias</span>
@@ -31,11 +32,15 @@
         <p class="text" id="seconds">0</p>
         <span>Segundos</span>
       </div>
-
     </div>
     <div class="saibaMais">Inscreva-se para saber mais sobre o lançamento</div>
     <button class="subscribe">Inscreva-se</button>
+  <img src="./images/images/bottom-image.svg" alt="bottom-image">
+</div>
+  <div class="side-2">
+    <img src="./images/images/rocket.svg" alt="rocket" class="rocket">
   </div>
+</div>
   </main>
 </body>
 <script src="./app.js"></script>
